Shortlist dialog for unauthenticated users

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1906,7 +1906,10 @@ footer,
 }
 
 .home-heading {
-  padding: $unit $unit*1.9;
+  padding: $unit $unit*1.5;
+  .mdc-typography--headline5 {
+    margin: $unit/2 0 0;
+  }
 }
 .home-jobs {
   background-color: $mdc-theme-secondary-light;
