--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -828,7 +828,7 @@ a {
     color: $mdc-theme-primary;
     -webkit-tap-highlight-color: transparent;
   }
-  .leaflet-control a {
+  .leaflet-control.leaflet-bar a {
     color: black;
   }
 }
