--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -34,13 +34,13 @@
 
   gtag('config', 'UA-3467930-4', { 'send_page_view': true, 'anonymize_ip': true });
 
-  {{#if request.params.query.debug ~}}
+  {{#ifAny request.params.query.debug (compare request.url.hostname "getinvolved.local") ~}}
   console.log('#### DEBUG MODE ON ####');
   console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Menus:', {{{regexReplace (regexReplace (stringify context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-  {{/if ~}}
+  {{/ifAny ~}}
   </script>
 </head>
 <body class="{{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
