--- a/sites/configurations/scvo/layouts/default.hbs
+++ b/sites/configurations/scvo/layouts/default.hbs
@@ -52,13 +52,13 @@
   });
   {{/each ~}}
 
-  {{#if request.params.query.debug ~}}
+  {{#ifAny request.params.query.debug (compare request.url.hostname "scvo.local") ~}}
   console.log('#### DEBUG MODE ON ####');
   console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   console.log('Menus:', {{{regexReplace (regexReplace (stringify context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-  {{/if ~}}
+  {{/ifAny ~}}
   </script>
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
