--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -61,7 +61,9 @@
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-            <h2>Tackling digital exclusion in Scotland</h2>
+            <h2>
+              Tackling digital exclusion in Scotland
+            </h2>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
             <a href="https://digitalparticipation.scot">
@@ -141,7 +143,9 @@
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Building a digitally confident third sector</h2>
+            <h2>
+              Building a digitally confident third sector
+            </h2>
           </div>
         </div>
         <div class="mdc-layout-grid__inner">
