Fixed subscribe checkbox on search save

--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -59,6 +59,7 @@
         <div class="mdc-checkbox">
           <input type="checkbox"
                  class="mdc-checkbox__native-control"
+                 name="subscribe"
                  id="email-on"/>
           <div class="mdc-checkbox__background">
             <svg class="mdc-checkbox__checkmark"
