--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -268,7 +268,7 @@ if(location.host.indexOf('.local') > -1){
         {{#if layoutParts.sidebar }}
         <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
           <div class="mdc-drawer__drawer">
-            <div class="mdc-drawer__header">
+            <div class="mdc-drawer__header hide-lg">
               <div class="mdc-drawer__header-content">
                 <a href="/" title="Goodmoves">
                   <svg width="222" height="42" xmlns="http://www.w3.org/2000/svg">
