--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -469,18 +469,6 @@ footer h3,
   }
 }
 
-.goodmoves-page {
-  margin: $unit*1.5 0;
-  .x-items {
-    margin-top: 0;
-  }
-  .mdc-card {
-    padding: $unit;
-    .mdc-typography--headline4 {
-      margin-top: 0;
-    }
-  }
-}
 .goodmoves-vacancy {
   margin-bottom: $unit*2.2;
 }
@@ -882,13 +870,13 @@ a {
 .pager-left {
   top: 0;
   left: 0;
-  margin-left: -1rem;
+  margin-left: -$unit;
 }
 
 .pager-right {
   top: 0;
   right: 0;
-  margin-right: -1rem;
+  margin-right: -$unit;
 }
 
 .search-info {
@@ -1214,10 +1202,7 @@ a {
 .goodmoves-vacancy .mdc-card.full {
   box-shadow: none;
 }
-.goodmoves-page .mdc-card.full {
-  width: 100%;
-  background-color: #fff;
-}
+
 
 // Grid Cards ==================================================================
 
@@ -1275,6 +1260,15 @@ hr {
 }
 .mdc-drawer__content-heading:focus {
   outline: none;
+}
+
+.post-image {
+  img {
+    max-width: 100%;
+    max-height: 280px;
+    margin: 0 auto;
+    display: block;
+  }
 }
 
 .mdc-icon-button {
@@ -1405,19 +1399,6 @@ body.shortlist {
   }
 }
 
-/* Maps */
-.container-content.container-map {
-  margin-left: -1.5rem;
-  max-width: none !important;
-  padding-right: 0;
-}
-
-.map-content {
-  h3 {
-    margin: 0;
-  }
-}
-
 .container-content,
 #search-tab-bar,
 #home-tab-bar {
@@ -1432,6 +1413,8 @@ body.shortlist {
 .container-content {
   width: 100%;
   padding-right: $unit;
+  margin-left: $unit;
+  margin-right: $unit;
   position: relative;
   max-width: 1200px;
   align-items: flex-end;
@@ -1440,6 +1423,36 @@ body.shortlist {
   }
   .container-fluid {
     position: relative;
+  }
+}
+/* Maps */
+.container-content.container-map {
+  margin-left: -$unit/2;
+  max-width: none !important;
+  margin-right: 0;
+  padding-right: 0;
+  z-index: 0;
+}
+.map-content {
+  h3 {
+    margin: 0;
+  }
+}
+.container-content.goodmoves-page {
+  margin: $unit*1.5 auto 0;
+  padding-bottom: $unit*1.5;
+  .x-items {
+    margin-top: 0;
+  }
+  .mdc-card.full {
+    width: 100%;
+    background-color: #fff;
+  }
+  .mdc-card {
+    padding: $unit;
+    .mdc-typography--headline4 {
+      margin-top: 0;
+    }
   }
 }
 
@@ -1502,7 +1515,7 @@ body {
       margin: $unit/2 0 $unit*(3/4);
       a .top-job {
         margin-left: 0;
-        margin-right: .2rem;
+        margin-right: $unit/5;
         display: inline-block;
         padding: .22222222rem $unit/2;
         font-weight: 700;
@@ -2139,11 +2152,8 @@ footer.mdc-layout__footer {
   }
 }
 @media screen and (max-width: $mobile-landscape-breakpoint) {
-  .container-content {
-    // padding: 0 !important;
-  }
   .container-content.container-map {
-    margin: 0 -$unit;
+    margin: 0;
   }
   footer.mdc-layout__footer h3 {
     font-size: $unit;
@@ -2452,9 +2462,6 @@ background-color: #42842A;
   .hide-sm {
     display: none;
   }
-  .container-content {
-    padding-left: $unit;
-  }
 }
 
 @media screen and (max-width: $mobile-landscape-breakpoint + 1) {
@@ -2470,9 +2477,6 @@ background-color: #42842A;
   .mdc-toolbar-fixed-adjust {
     padding-top: $header-upper-height;
   }
-  .container-content {
-    padding-left: $unit;
-  }
 }
 
 @media screen and (min-width: $mobile-landscape-breakpoint + 1) {
@@ -2485,9 +2489,9 @@ background-color: #42842A;
     z-index: 1;
     width: 320px;
     min-height: 640px;
-    margin-right: 1.5rem;
+    margin-right: $unit/2;
     margin-bottom: 0;
-    padding-bottom: 1rem;
+    padding-bottom: $unit;
     border-right: none;
     background-color: white !important;
     color: rgba(0, 0, 0, 0.87);
@@ -2526,6 +2530,11 @@ background-color: #42842A;
     .mdc-layout-grid__cell--span-2, .mdc-layout-grid__cell--span-2-desktop {
       grid-column-end: span 1;
     }
+  }
+}
+@media screen and (max-width: $desktop-landscape-breakpoint) {
+  .container-content {
+    padding: 0;
   }
 }
 
