--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2992,6 +2992,12 @@ body.post.author {
   }
   dd {
     width: 70%;
+    p {
+      span {
+        margin-left: $unit/5;
+        margin-right: $unit/5;
+      }
+    }
     .fa-ul {
       margin-left: $unit*1.5;
       a {
@@ -3524,6 +3530,7 @@ p:last-child {
     top: -0.1rem;
     position: relative;
   }
+  .book-now a::after,
   .scvo-staff a::after,
   a.noext::after,
   a[href^="https://scvo.org"]::after,
