--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -15,7 +15,7 @@
     </ul>
     <div class="mdc-layout-grid hide-md hide-lg">
       <p class="mdc-typography--body2 v-margin-full-bottom">
-        This {{lowercase role_status_list}} position is based in {{trim (replace location "Based in" "")}}, with a salary of {{{trim (lowercase salary)}}}. The closing date is the {{{momentFormat (moment closing_date "x") "Do \o\f MMMM, YYYY"}}}.
+        This {{lowercase role_status_list}} position is based in {{trim (replace location "Based in" "")}}{{#compare salary "!==" "TBC"}}{{#compare salary "!==" "Sessional"}}, with a salary of {{{trim (lowercase salary)}}}{{/compare}}{{/compare}}. The closing date is the {{{momentFormat (moment closing_date "x") "Do \o\f MMMM, YYYY"}}}.
       </p>
     </div>
     <div class="mdc-layout-grid hide-sm">
