Added application form for CJS

--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
@@ -81,6 +81,14 @@
             <li class="mdc-list-item">
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/JCP%20CJS%20Application%20v8.doc" target="_blank">
+                  <span class="title">JCP CJS Application</span>
+                </a>
+              </span>
+            </li>
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
                 <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/JCP%20CJS%20Eligibility%20Referral%20v8.2.doc" target="_blank">
                   <span class="title">JCP CJS Eligibility Referral</span>
                 </a>
@@ -90,7 +98,7 @@
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
                 <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/CJS%20PT%20Dis%20Eligibility%20Referral%20Form%20v8.2.doc" target="_blank">
-                  <span class="title">CJS PT Dis Eligibility Referral Form</span>
+                  <span class="title">CJS PT Disability Eligibility Referral Form</span>
                 </a>
               </span>
             </li>
@@ -98,7 +106,7 @@
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
                 <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/Vulnerable%20Group%20Criteria%20v8.docx" target="_blank">
-                  <span class="title">Vulnerable group criteria</span>
+                  <span class="title">Vulnerable Group Criteria</span>
                 </a>
               </span>
             </li>
