--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -1,7 +1,13 @@
 <div id="detailed-results-container" class="container-content container-map">
-  <div id="map-full" data-map-name="fullMap" data-map-options='{}'></div>
+  <div id="map-full" data-map-name="fullMap" data-map-options='{
+    "circle": {
+      "lat": {{@root.request.params.query.lat}},
+      "lng": {{@root.request.params.query.lng}},
+      "radius": {{@root.request.params.query.distance}}
+    }
+  }'></div>
 </div>
-{{#each data.search_data.map_results.hits.hits}}
+{{#each @root.data.search_data.map_results.hits.hits}}
   {{#if _source.geo_vacancy_coords}}
     {{#each (arrayify _source.geo_vacancy_coords)}}
       <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-shortlisted="{{#each @root.data.shortlist_ids.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-title="{{../_source.title}}">
