--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -39,7 +39,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-map-marker-alt mdc-text-field__icon"></span>
-                <input type="text" id="where-jobs" name="location" class="mdc-text-field__inputZz" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
+                <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
                   {
                     "types": ["(regions)"],
                     "componentRestrictions": {
