--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -12,15 +12,15 @@
       {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
       {{#if distance ~}}
       <ul class="fa-ul mdc-card__action">
-        <li class="mdc-card__info--vacancy-status mdc-typography--body2">
+        <li class="mdc-card__info--search-distance mdc-typography--body2">
           <span class="fa-li"><span class="far fa-location-arrow fa-fw" title="Distance"></span></span>
           {{#compare distance "<" 4 ~}}
-            Less than {{inflect (round distance "up") "mile" "miles" true}} from {{@root.request.params.query.location}}
+            Less than {{inflect (round distance "up") "mile" "miles" true}} away
           {{else}}
             {{#compare distance "<" 10 ~}}
-              Within {{round distance "up"}} miles of {{@root.request.params.query.location}}
+              Within {{round distance "up"}} miles
             {{else}}
-              {{round distance "up"}} miles from {{@root.request.params.query.location}}
+              {{round distance "up"}} miles away
             {{/compare ~}}
           {{/compare ~}}
         </li>
