--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -56,11 +56,11 @@
               <div class="mdc-form-field">
                 <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
                   <select data-location="where-jobs" class="mdc-select__native-control" name="distance" id="distance-jobs">
-                    <option value="8046.72" selected>within 5 miles</option>
-                    <option value="16093.44">within 10 miles</option>
-                    <option value="40233.6">within 25 miles</option>
-                    <option value="80467.2">within 50 miles</option>
-                    <option value="any">any distance</option>
+                    <option value="8.04672" selected>within 5 miles</option>
+                    <option value="16.09344">within 10 miles</option>
+                    <option value="40.2336">within 25 miles</option>
+                    <option value="80.4672">within 50 miles</option>
+                    <option value="">any distance</option>
                   </select>
                   <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-jobs">
                     Distance
