--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -161,7 +161,7 @@
         {{/ifAny ~}}
         --}}
         <div class="location-info">
-          {{#if geo_vacancy_coords}}
+          {{#if geo_vacancy_coords.0}}
             <div class="container-content container-map">
               <div id="map-vacancy" data-map-name="vacancyMap" data-map-options='{
                 "center": {
