--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -163,7 +163,13 @@
         <div class="location-info">
           {{#if geo_vacancy_coords}}
             <div class="container-content container-map">
-              <div id="map-vacancy" data-map-name="vacancyMap" data-map-options=''></div>
+              <div id="map-vacancy" data-map-name="vacancyMap" data-map-options='{
+                "center": {
+                  "lat": {{geo_vacancy_coords.0.lat}},
+                  "lng": {{geo_vacancy_coords.0.lon}}
+                },
+                "zoom": 13
+              }'></div>
             </div>
             {{#each (arrayify geo_vacancy_coords)}}
               <marker style="display:none;" data-map="vacancyMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../organisation.name}} - {{../title}}">
